@@ -1,5 +1,7 @@
 1.2.36:
 	- fix unresponsive taskbar when PassFirstClickToClient=0
+	- add support for sysfs interface (instead of proc) for battery 
+          status (initial code by Santiago Garcia Mantinan)
 
 1.2.35: 2008-01-05
 	- Application tray bug fixes
